--- a/investidores.html
+++ b/investidores.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <h1>Junta-te à Revolução Aérea</h1>
+  <h1>Junta-te à Revolução!</h1>
   <p>O Roadster FPV é mais do que um drone. É um manifesto de performance, design e produção nacional. Estamos a abrir as portas para investidores que acreditam no futuro, na tecnologia feita com alma e na velocidade como arte.</p>
 
   <h2>Mercado em Expansão</h2>
